# 42_School

./: .gitignore  README.md
A-Maze-ing/: README.md
Born2beRoot/: README.md  monitoring.sh
Fly-in/: README.md
ft_printf/: Makefile  README.md  a.out  ft_printf  ft_printf.c  ft_printf.h  libftprintf.h  printf_helpers.c  printfhelper.c  test
get_next_line/: Makefile  README.md  get_next_line  get_next_line.c  get_next_line.h  get_next_line_utils.c  main.c  test  test.txt  vgcore.28254
libft/: .gitignore  Makefile  README.md  a.out  all.c  atoi  ft_atoi  ft_atoi.c  ft_bzero.c  ft_calloc.c  ft_ft_memalloc.c  ft_isalnum.c  ft_isalpha.c  ft_isascii.c  ft_isdigit.c  ft_isprint.c  ft_itoa.c  ft_itoa_base.c  ft_lstadd_back.c  ft_lstmap.c  ft_lstnew.c  ft_lstsize.c  ft_memalloc.c  ft_memccpy.c  ft_memchr.c  ft_memcmp.c  ft_memcpy.c  ft_memdel.c  ft_memmove.c  ft_memset.c  ft_putchar.c  ft_putchar_fd.c  ft_putendl.c  ft_putendl_fd.c  ft_putnbr.c  ft_putnbr_base.c  ft_putnbr_fd.c  ft_putstr.c  ft_putstr_fd.c  ft_realloc.c  (+39 more)
libft+/: ft_isprint.c  ft_memchr.c  ft_memmove.c  ft_putendl.c  ft_putendl_fd.c  ft_putnbr.c  ft_putnbr_fd.c  ft_putstr.c  ft_putstr_fd.c  ft_strchr.c  ft_strcpy.c  ft_strdup.c  ft_strlen.c  ft_strmap.c  ft_strncat.c  ft_strncpy.c  ft_strnequ.c  ft_strstr.c  ft_toupper.c  libft.h
push_swap/: Makefile  README.md  push_swap  push_swap.c  push_swap.h  push_swap_utils.c
push_swap/libft/: Makefile  ft_lstadd_back.c  (+9 more)
python_modules/: README.md
python_modules/module08/ex1/: loading.py  pyproject.toml
python_modules/module08/ex1/matrix_env/: pyvenv.cfg
(+160 files in other folders)
