[project]
name = "ex1"
version = "0.1.0"
description = ""
authors = [
    {name = "diosoare"}
]
requires-python = ">=3.10"
dependencies = [
    "numpy (>=1.26,<2.0)",
    "pandas (>=2.2,<3.0)",
    "matplotlib (>=3.8,<4.0)"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
